--- a/CHATBOT/package.json
+++ b/CHATBOT/package.json
@@ -10,7 +10,8 @@
     "dependencies": {
       "cors": "^2.8.5",
       "express": "^4.18.2",
-      "sqlite3": "^5.1.6"
+      "sqlite3": "^5.1.6",
+      "uuid": "^9.0.1"
     },
     "devDependencies": {
       "nodemon": "^3.0.1"
